--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^9.2.0
+  animated_text_kit: ^4.2.1
   get: ^4.6.1
   get_storage: ^2.0.3
 dev_dependencies:
