--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_flip_card: ^1.0.2
   flip_card: ^0.6.0
   youtube_player_flutter: ^8.0.0
+  flutter_bounceable: ^1.0.2
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
